adding some test post stuff

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://brianmannmath.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Math and Programming
+subtitle: A blog about my love of mathematics and computers.
+author: Brian Mann
 simple_search: http://google.com/search
 description:
 
