--- a/_config.yml
+++ b/_config.yml
@@ -64,8 +64,8 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 
 # Github repositories
 github_user: brianmannmath
-github_repo_count: 3
-github_show_profile_link: true
+github_repo_count: 4
+github_show_profile_link: false
 github_skip_forks: true
 
 # Twitter
